@@ -1,3 +1,12 @@
+2007-07-10  Eli Fidler  <eli@staikos.net>
+
+        Reviewed by George Staikos.
+
+        Properly url-decode data urls.
+
+        * Api/qwebnetworkinterface.cpp:
+        (QWebNetworkInterfacePrivate::parseDataUrl):
+
 2007-07-09  Adam Treat  <adam@staikos.net>
 
         Reviewed by George Staikos.
